extended sample ui fix on small screens

--- a/extended/style/style.css
+++ b/extended/style/style.css
@@ -174,6 +174,14 @@ button[disabled] {
 
 .section > table {
     padding: 1rem var(--small-spacing) 0 var(--small-spacing);
+    width: 100%;
+}
+
+@media screen and (min-width: 450px) {
+    .section > table {
+        width: auto;
+    }
+    
 }
 
 .section > table td.padding-left {
